--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>OstaBay</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
@@ -88,7 +88,9 @@
             </div>
             </nav>
         </div>
-        <div class="admin-heading"></div>
+        <div class="admin-heading">
+            <img src="Images/user.svg">
+        </div>
 
         <div class="main-content">
             <div class="content-heading">
